set docker log and regression steps to always run

--- a/.github/workflows/pg9.5.yml
+++ b/.github/workflows/pg9.5.yml
@@ -41,9 +41,11 @@ jobs:
           docker logs setuser > setuser_container.out 2>&1
 
       - name: Copy regression diff
+        if: always()
         continue-on-error: true
         run: |
-          docker cp setuser:/opt/set_user/results/regression.diffs ./regression.diffs
+          docker cp setuser:/opt/set_user/regression.diffs ./regression.diffs
+          cat ./regression.diffs
 
       - name: Upload artifacts
         if: always()
