--- a/.github/workflows/pg9.4.yml
+++ b/.github/workflows/pg9.4.yml
@@ -35,14 +35,17 @@ jobs:
           docker exec setuser make -C /opt/set_user USE_PGXS=1 REGRESS_OPTS='--user=postgres' installcheck
     
       - name: Docker Log
+        if: always()
         run: |
           docker cp setuser:/opt/set_user/results/set_user.out ./set_user.out
           docker logs setuser > setuser_container.out 2>&1
       
       - name: Copy regression diff
+        if: always()
         continue-on-error: true
         run: |
-          docker cp setuser:/opt/set_user/results/regression.diffs ./regression.diffs
+          docker cp setuser:/opt/set_user/regression.diffs ./regression.diffs
+          cat ./regression.diffs
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
