--- a/.github/workflows/pg9.6.yml
+++ b/.github/workflows/pg9.6.yml
@@ -42,9 +42,11 @@ jobs:
 
 
       - name: Copy regression diff
+        if: always()
         continue-on-error: true
         run: |
-          docker cp setuser:/opt/set_user/results/regression.diffs ./regression.diffs
+          docker cp setuser:/opt/set_user/regression.diffs ./regression.diffs
+          cat ./regression.diffs
 
       - name: Upload artifacts
         if: always()
