--- a/.github/workflows/build-regression.yml
+++ b/.github/workflows/build-regression.yml
@@ -1,5 +1,3 @@
-name: Postgres9.6
-
 on:
   push:
     branches:
@@ -9,11 +7,12 @@ on:
       - master
 
 jobs:
-  pg13:
-    name: Postgres9.6
+  pg96:
+    name: Postgre9.6
     runs-on: ubuntu-latest
     env:
-      PG_VER: "9_6"
+      POSTGRES_SERVER_DEV_VER: 9.6
+      CONT_IMG_VER: postgres:9.6
       DOCKER_DIR: ${{ github.workspace }}/.github/docker
       RESOURCE_DIR: ${{ github.workspace }}/.github/resources
       SCRIPT_DIR: ${{ github.workspace }}/.github/resources/scripts
@@ -23,7 +22,8 @@ jobs:
 
       - name: Build set_user
         run: |
-          docker build -t setuser:latest ${{ env.DOCKER_DIR }}/pg${{ env.PG_VER }}
+          docker build -t setuser:latest --build-arg CONT_IMG_VER=${{ env.CONT_IMG_VER }} --build-arg SERVER_DEV_VER=${{ env.SERVER_DEV_VER }} ${{ env.DOCKER_DIR }} 
+
 
       - name: Run PG set_user
         run: |
@@ -39,14 +39,13 @@ jobs:
         run: |
           docker cp setuser:/opt/set_user/results/set_user.out ./set_user.out
           docker logs setuser > setuser_container.out 2>&1
-
-
+      
       - name: Copy regression diff
         if: always()
         continue-on-error: true
         run: |
           docker cp setuser:/opt/set_user/regression.diffs ./regression.diffs
-          cat ./regression.diffs
+          cat ./refression.diffs
 
       - name: Upload artifacts
         if: always()
