--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -25,7 +25,7 @@ jobs:
           - {pgver: 11, devpkg: 11}
           - {pgver: 12, devpkg: 12}
           - {pgver: 13, devpkg: 13}
-          - {pgver: 14beta3, devpkg: 14}
+          - {pgver: 14rc1, devpkg: 14}
     steps:
       - name: Checkout set_user repo
         uses: actions/checkout@v2.3.4
@@ -47,7 +47,7 @@ jobs:
           docker exec set_user make -C /src/set_user USE_PGXS=1 REGRESS_OPTS='--user=postgres' installcheck
 
       - name: Show any regression diffs
-        if: always()
+        if: ${{ failure() }}
         continue-on-error: true
         run: |
           docker cp set_user:/src/set_user/regression.diffs ./regression.diffs
