--- a/.github/workflows/regression-tests.yml
+++ b/.github/workflows/regression-tests.yml
@@ -17,16 +17,21 @@ jobs:
       SCRIPT_DIR: ${{ github.workspace }}/.github/resources/scripts
     strategy:
       matrix:
-        pgver,devpkg: [9.4, 9.5, 9.6, 10, 11, 12, 13, 14]
+        pgver: [9.4, 9.5, 9.6, 10, 11, 12, 13, 14, 14beta3]
+        include:
+          - pgver: 14beta3
+            devpkg: 14
     steps:
       - name: Checkout set_user repo
         uses: actions/checkout@v2.3.4
 
       - name: Build set_user
         run: |
+          DEVPKG=${{ matrix.devpkg }}
+          [ -z "$DEVPKG"] && DEVPKG=${{ matrix.pgver }}
           docker build -t set_user:latest \
                 --build-arg PGVER=${{ matrix.pgver }} \
-                --build-arg DEVPKG=${{ matrix.devpkg }} \
+                --build-arg DEVPKG=$DEVPKG \
                 -f ${{ env.DOCKER_DIR }}/Dockerfile .
 
       - name: Run PG set_user
